deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: product
  name: product
spec:
  replicas: 1
  selector:
    matchLabels:
      app: product
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: product
    spec:
      containers:
      - image: de.icr.io/ydbnamespace/product:2.0
        name: product
        resources: {}
status: {}
